<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCompanyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/company_name"
            android:textColor="@color/background"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivCompanyLogo"
            app:layout_constraintStart_toEndOf="@+id/ivCompanyLogo"
            app:layout_constraintTop_toTopOf="@+id/ivCompanyLogo" />

        <com.github.siyamed.shapeimageview.CircularImageView
            android:id="@+id/ivCompanyLogo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:scaleType="fitStart"
            app:layout_constraintStart_toEndOf="@+id/tvCompanyId"
            app:layout_constraintTop_toTopOf="parent"
            app:siBorderColor="@color/background"
            app:siBorderWidth="2dp"
            app:siRadius="18dp"
            app:siSquare="true" />

        <TextView
            android:id="@+id/tvCompanyId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/one"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivCompanyLogo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivCompanyLogo" />

        <View
            android:id="@+id/view5"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/lineColor"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCompanyLogo" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>